# Single-Sign-On-Kata

./: .gitignore  Readme.md
CSharp/: SingleSignOnKata.sln
CSharp/SingleSignOnKata/: Program.cs  SingleSignOnKata.csproj
CSharp/SingleSignOnKata/Properties/: AssemblyInfo.cs
CSharp/SingleSignOnKata/myservice/: MyService.cs
CSharp/SingleSignOnKata/sso/: AuthenticationGateway.cs  Request.cs  Response.cs  SSOToken.cs  SingleSignOnRegistry.cs
CSharp/UnitTests/: Given_MyService.cs  MyServiceTest.cs  UnitTests.csproj  packages.config
CSharp/UnitTests/Properties/: AssemblyInfo.cs
Java/: AuthenticationGateway.java  SSOToken.java  SingleSignOnRegistry.java  pom.xml
Python/: my_service.py  single_sign_on.py  test_my_service.py
Scala/: build.sbt
TypeScript/: .eslintrc.js  babel.config.js  my_service.test.ts  my_service.ts  package-lock.json  package.json  single_sign_on.ts
cpp/: CMakeLists.txt  README.md
cpp/src/: AuthenticationGateway.cpp  AuthenticationGateway.h  CMakeLists.txt  ISingleSignOnRegistry.cpp  ISingleSignOnRegistry.h  MyService.cpp  MyService.h  Request.cpp  Request.h  Response.cpp  Response.h  SSOToken.cpp  SSOToken.h  SingleSignOnRegistry.cpp  SingleSignOnRegistry.h  SingleSignOnRegistryTestDouble.cpp  SingleSignOnRegistryTestDouble.h
cpp/test-catch2/: sample_catch.cpp
cpp/test-doctest/: sample_doctest.cpp
cpp/test-gtest/: sample_gtest.cpp
php/: composer.json  phpunit.xml
php/src/MyService/: MyService.php
php/src/SSO/: AuthenticationGateway.php  Request.php  Response.php  SSOToken.php  SingleSignOnRegistry.php
(+11 files in other folders)
